#46 Kept routing strategy as simple string in Swagger for now
