# docs/swagger.json
@@ -406,31 +406,9 @@
                 },
                 "strategy": {
                     "description": "strategy on picking the next model to serve the request",
-                    "enum": [
-                        "least_latency",
-                        "round_robin",
-                        "priority"
-                    ],
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/routing.Strategy"
-                        }
-                    ]
+                    "type": "string"
                 }
             }
-        },
-        "routing.Strategy": {
-            "type": "string",
-            "enum": [
-                "least_latency",
-                "priority",
-                "round_robin"
-            ],
-            "x-enum-varnames": [
-                "LeastLatency",
-                "Priority",
-                "RoundRobin"
-            ]
         },
         "schemas.ChatMessage": {
             "type": "object",
